# Robust-Provider

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: check.yml  publish.yml  test.yml
examples/: get_latest_block.rs
scripts/: setup-kurtosis.sh
src/: lib.rs
src/macros/: logging.rs  mod.rs  rpc.rs  tracing.rs
src/robust_provider/: builder.rs  errors.rs  http_subscription.rs  mod.rs  provider.rs  provider_conversion.rs  resilience.rs  robust.rs  subscription.rs
tests/: common.rs  custom_methods.rs  eth_namespace.rs  http_subscription.rs  mod.rs  rpc_failover.rs  subscription.rs
tests/common/: mod.rs  network_params.yaml  setup_anvil.rs  setup_kurtosis.rs
tests/eth_namespace/: account.rs  block.rs  call.rs  fee.rs  log.rs  mod.rs  transaction.rs
tests/integration/: http_endpoints.rs  mod.rs
