[package]
name = "robust-provider"
description = "Robust Provider is a library for creating resilient RPC providers for EVM-based blockchains with automatic retries and failover support."
authors = ["OpenZeppelin"]
license = "MIT"
edition = "2024"
repository = "https://github.com/OpenZeppelin/Robust-Provider"
version = "0.2.0"
categories = [
    "asynchronous",
    "web-programming",
    "cryptography::cryptocurrencies",
]
keywords = ["evm", "ethereum", "blockchain", "rpc", "alloy"]

[workspace.lints.clippy]
pedantic = "warn"
all = "warn"

[dependencies]
alloy = "1.1.2"
tokio = "1.48"
futures = "0.3.31"
backon = "1.6.0"
tokio-stream = "0.1.17"
thiserror = "2.0.17"
tokio-util = "0.7.17"

tracing = { version = "0.1", optional = true }

[dev-dependencies]
anyhow = "1.0"
alloy = { version = "1.1.2", features = ["node-bindings", "provider-ws"] }

[features]
tracing = ["dep:tracing"]
